# django-starter-template

./: .gitattributes  .gitignore  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: verify-template.yml
src/: gunicorn.conf.py
src/project_name/: settings.py
