[project]
name = "{{ project_name }}"
version = "0.1.0"
description = "Django project template"
authors = [
  { name = "Mainak Chhari", email = "8137117+mainakchhari@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
  "django>=6.0",
  "django-environ>=0.13.0",
  "whitenoise>=6.11.0",
]

[project.scripts]
app-admin = "manage:main" # start dev with `app-admin runserver`

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
