[project]
name = "{{ project_name }}"
version = "0.2.0"
description = "Django project template"
requires-python = ">=3.12"
dependencies = [
  "django>=6.0",
  "django-environ>=0.13.0",
  "django-rich>=2.2.0",
  "whitenoise[brotli]>=6.11.0",
]

[project.scripts]
app-admin = "manage:main" # start dev with `app-admin runserver`

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]
packages = ["src/{{ project_name }}"]

[tool.hatch.version]
path = "src/{{ project_name }}/__about__.py"
